# Yohyda

./: LICENCJA.txt  README.md  README.txt  creator.sh  debug.sh  fasada.ini  recompile.sh  screen.ini  start.sh  stop.sh
browserside/: readme.txt
facies/: README.md  README.md~
facies/browserside/: README.md
facies/serverside/: README.md  README.md~
fasada-core/: CMakeLists.txt  README.md  readme.txt  readme.txt~
fasada-core/doc/: http:⁄⁄www.doxygen.nl⁄.html
fasada-core/lib/facebookspec/: facebookspec.cpp  facebookspec.h  loader_facebookjson.cpp  loader_facebookjson.h  processor_facebookjson.cpp
fasada-core/lib/fasada/: fasada.cpp  fasada.hpp  form_processor.cpp  form_processor.h  format_toolbox.cpp  format_toolbox.h  loader_csv.cpp  loader_csv.h  loader_json.cpp  loader_json.h  loader_processor.cpp  loader_processor.h  loader_txt.cpp  loader_txt.h  processor_add.cpp  processor_add.h  processor_check_file.cpp  processor_check_file.h  processor_csv.cpp  processor_csv.h  processor_del.cpp  processor_del.h  processor_dfs.cpp  processor_dfs.h  processor_find.cpp  processor_find.h  processor_get.cpp  processor_get.h  processor_info.cpp  processor_info.h  processor_json.cpp  processor_json.h  processor_ls.cpp  processor_ls.h  processor_ren.cpp  processor_ren.h  processor_set.cpp  processor_set.h  processor_txt.cpp  processor_txt.h  (+21 more)
fasada-core/lib/fasada/_config_template/: fasada.ini  screen.ini~
fasada-core/lib/fasada/_processor_template/: new_processor.sh  processor_xxx.cpp  processor_xxx.h
fasada-core/lib/fasada/_skin_template/: fasada.css
fasada-core/lib/fasada/http/: URLparser.cpp  URLparser.hpp  eurencodealt.cpp
fasada-core/lib/fasada/tree/: magic_file_tester.cpp  magic_file_tester.h  ptree_foreach.hpp  tree.cpp
fasada-core/tools/indexer/: build.sh  indexer_main.cpp
fasada-core/tools/treeedit/: treeedit_main.cpp
fasada-core/treeserver1/: treeserver1_main.cpp
fasada-core/wwwserver1/: README.md  README.md~  commwithfasada.cpp  connection_manager.cpp  mime_types.cpp  reply.cpp  reply.hpp  request_parser.cpp  server.cpp  wwwserver1_main.cpp
fasada-core/wwwserver1/origin/: reply.cpp.html  request.hpp.html
private/: README.md
public/_skin/: fasada.css
serverside/: CMakeLists.txt  CMakeLists.txt~  cmake_install.cmake  connection.cpp  connection.hpp  connection_manager.hpp  header.hpp  main.cpp  mime_types.cpp  mime_types.hpp  processor_dfs.cpp  processor_dfs.h  processor_ls.cpp  processor_ls.h  readme.txt  reply.cpp  reply.hpp  request.hpp  request_handler.cpp  request_parser.hpp  server.cpp  server.hpp
serverside/_trash/: CMakeLists.txt~  CMakeLists.txt~2  connection.cpp~  connection.hpp~  connection_manager.cpp~  connection_manager.hpp~  readme.txt~  request.hpp~  request_handler.hpp~  request_parser.cpp~
serverside/facebookspec/: facebookspec.cpp  facebookspec.h  processor_facebookjson.cpp  processor_facebookjson.h
serverside/fasada/: fasada.hpp  memory_pool.h  processor_add.cpp  processor_add.h  processor_check_file.cpp  processor_check_file.h  processor_del.cpp  processor_del.h  processor_dfs.cpp  processor_dfs.h  processor_find.cpp  processor_find.h  processor_get.cpp  processor_ls.cpp  processor_ls.h  processor_ren.cpp  processor_ren.h  processor_set.cpp  processor_set.h  register_processors.cpp  tree_consts.h  tree_processor.cpp  tree_processor.h  tree_types.h
serverside/fasada/_skin_template/: fasada.css
serverside/fasada/http/: URLparser.cpp  URLparser.hpp
serverside/fasada/tree/: ptree_foreach.hpp
serverside/origin/: connection_manager.hpp.html  request_handler.cpp.html  server.cpp.html  server.hpp.html
serverside/tools/PTREEWalker/: ptree_foreach.hpp
serverside/tools/PTREEWalkersLib/: ptree_foreach.hpp
serverside/tools/URLparserLib/: URLparser.cpp  URLparser.hpp
serverside/tools/indexer/: indexer_main.cpp
serverside/tools/treeedit/: main.cpp  main.cpp~  treeedit_main.cpp
serverside/treeserver1/: main.cpp  main.cpp~  memory_pool.h  processor_dfs.cpp  processor_dfs.h  processor_get.cpp  processor_get.h  processor_ls.cpp  processor_ls.h  tree_consts.h  tree_processor.cpp  tree_processor.h  tree_types.h  treeserver1_main.cpp
serverside/wwwserver1/: .qtcreator.err  commwithfasada.cpp  connection.cpp  connection.hpp  connection_manager.cpp  connection_manager.hpp  header.hpp  main.cpp  mime_types.cpp  mime_types.hpp  request.hpp  request_handler.cpp  request_handler.hpp  request_parser.hpp  server.hpp
serverside/wwwserver1/origin/: connection.hpp.html  connection_manager.cpp.html  main.cpp.html  reply.hpp.html  request_handler.hpp.html  request_parser.hpp.html
